# ordabottur

./: .gitignore  Cargo.toml  README.md  TODO  lítil.html  stylesheet_dictionaries.styl
src/: dictionary.rs  main.rs  util.rs  wordgame.rs
src/dictionary/: sprotin.rs  uio.rs
