[package]
name = "orðabottur"
version = "0.1.0"
description = "Bot ið dugir orð væl"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_res_error_resolve = []

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
serenity = "0.8"
regex = "1"
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.11"
encoding_rs = "0.8"
ego-tree = "0.6"
# futures = "0.3"