[package]
name = "orðabottur"
version = "0.2.0"
description = "Bottur ið dugir orð væl"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_res_error_resolve = []

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
serenity = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
scraper = {version = "0.14", default-features = false, features = ["deterministic"] }
encoding_rs = "0.8"
ego-tree = "0.6"
numbers_to_words = {git = "https://github.com/LFalch/numbers_to_words.git"}
rand = { version = "0.8", features = ["alloc"] }
